D&D_BECM/BDnDSheet.css
.sheet-rolltemplate-5eDefault .sheet-rt-card {
    width:95%;
    background-color:#FFFFFF;
	font-size: 11px;

	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;

	border: black 1px solid;
	padding: 5px 0px;

	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
/* Generic header */
.sheet-rolltemplate-5eDefault .sheet-rt-header {
	text-align: center;
	position: relative;
	color: #fff;
	margin: 0 -10px 10px -10px;
	padding: 5px 0;
	background-color: #5c5c5c;
	background-image:  linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0));
	-moz-box-shadow: 0 2px 0 rgba(0,0,0,.3);
	-webkit-box-shadow: 0 2px 0 rgba(0,0,0,.3);
	box-shadow: 0 2px 0 rgba(0,0,0,.3);
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:before,
.sheet-rolltemplate-5eDefault .sheet-rt-header:after {
	content: '';
	position: absolute;
	border-style: solid;
	border-color: transparent;
	bottom: -10px;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:before {
	border-width: 0 10px 10px 0;
	border-right-color: #222;
	left: 0;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header:after {
	border-width: 0 0 10px 10px;
	border-left-color: #222;
	right: 0;
}

.sheet-rolltemplate-5eDefault .sheet-rt-title {
	font-size: 1.5em;
}

.sheet-rolltemplate-5eDefault .sheet-rt-subheader {

}

/* Melee header*/
.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-weapon {
	background-color: #2C5D28;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-weapon:before {
	border-right-color: #375035;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-weapon:after {
	border-left-color: #375035;
}

/* Spell header */
.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-spell{
	background-color: #45285D;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-spell:before {
	border-right-color: #443550;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-spell:after {
	border-left-color: #443550;
}

/* Ability check header */
.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-ability{
	background-color: #28595D;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-ability:before {
	border-right-color: #354E50;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-ability:after {
	border-left-color: #354E50;
}

/* Saving throw header */
.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-save{
	background-color: #5D2828;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-save:before {
	border-right-color: #503535;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-save:after {
	border-left-color: #503535;
}

/* Death Save header */
.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-deathsave{
	background-color: #240F0F;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-deathsave:before {
	border-right-color: #1F1414;
}

.sheet-rolltemplate-5eDefault .sheet-rt-header.sheet-deathsave:after {
	border-left-color: #1F1414;
}


.sheet-rolltemplate-5eDefault .sheet-row:nth-child(even) {

	background-color: #E9EDEE;
}


.sheet-rolltemplate-5eDefault .sheet-rt-key {
	font-weight: bold;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1.1em;

	-moz-text-decoration-color: #D64541;
	text-decoration-color: #D64541;

	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;

	max-width: 120px;
	padding: 2px 2px 2px 0px;

}

.sheet-rolltemplate-5eDefault .sheet-rt-key-wide {
	font-weight: bold;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 1.1em;

	-moz-text-decoration-color: #D64541;
	text-decoration-color: #D64541;

	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;

	padding: 2px 2px 2px 0px

}


.sheet-rolltemplate-5eDefault .sheet-rt-value {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;

	margin-top: 2px ;

}

.sheet-rolltemplate-5eDefault .sheet-main-content {

}

.sheet-rolltemplate-5eDefault .sheet-main-content hr.sheet-roll {
	width: 80%;
	margin-left: auto;
	margin-right: auto;

	color: #D64541;
	background-color: #D64541;
	height: 1px;
}


.sheet-rolltemplate-5eDefault .sheet-rt-emote {
	font-style: italic;
	font-size: 11px;
	font-family: Arial;
	text-align: center;

	border: green 1px dashed;
	border-radius: 5px;

	padding: 0px 5px;
	margin: 0px 5px 5px 5px;

}

/*** ROLL TEMPLATE STYLING ENDS HERE **/


/* overall wrapper to fix moving width issues with overflow on hidden sections */
 .sheet-overall-wrapper {
	max-width: 832px;
}

/* Tweak repeating section buttons so they have a bottom margin and dont overflow when in edit mode. */
 div[class^="repcontrol"] {
	margin-bottom: 5px;
}

 div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn repcontrol_add"] {
	display: inline-block!important;
	visibility: hidden;
}

/* character/force button Settings */

 div.sheet-character,  div.sheet-force {
	display: none;
}

 input.sheet-is-force:checked ~ div.sheet-force,
 input.sheet-is-force:not(:checked )~ div.sheet-character
{
	display: block;
}

 input.sheet-is-force {
	width: 20%;
	height: 16px;
	cursor: pointer;
	position: relative;
	opacity: 0;
	z-index: 9999;
}

 span.sheet-is-force-tab::before {
	content: "Character Sheet";
}

 span.sheet-is-force-tab {
	text-align: center;
	display: inline-block;
	width: 20%;
	height: 16px;
	font-size: 9px;

	background: #65763c;
	color: white;
	font-weight: bold;
	border-radius: 4px;
	margin-left: -20%
}

 input.sheet-is-force:checked + span.sheet-is-force-tab {
	background: #93537c;
	color: white;
	border-radius: 4px;
}

 input.sheet-is-force:checked + span.sheet-is-force-tab::before {
	content: "Force Sheet"
}

/* END character/force button Settings */
/* NPC button Settings */

 div.sheet-npcinfo {
	display: none;
}

 input.sheet-is-npc:checked ~ div.sheet-npcinfo {
	display: block;
}

 input.sheet-is-npc {
	width: 5%;
	height: 16px;
	cursor: pointer;
	position: relative;
	opacity: 0;
	z-index: 9999;
}

 span.sheet-is-npc-tab::before {
	content: "PC";
}
/* ... */

